Refactor code for service registration and improve logging
Extracted logic for registering and simulating work from main service to its own function for better modularity in cmd/root.go. Adjusted logs to show different service stages for easier debugging.

Additionally, added ability for flags to handle int64 values. Refactored usage of Viper for loading configuration from the environment and file system, replacing direct calls to Viper methods with calls to methods on Viper instance. A watch on changes in configuration file is now also included.

These changes were made to ensure better traceability in logging, better organization of service commands, and to provide more options for configuration flags.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,13 +10,12 @@ builds:
     goos:
       - linux
       - windows
-      - darwin
     goarch:
       - amd64
     ldflags:
       - -s -w -X 'main.Version={{.Version}}' -X 'main.CommitHash={{.FullCommit}}' -X 'main.Date={{.Date}}'
     env:
-      - CGO_ENABLED=0
+      - CGO_ENABLED=1
 
 archives:
   - format: tar.gz
@@ -32,7 +31,10 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-
+checksum:
+    name_template: 'checksums.txt'
+snapshot:
+    name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
